--- a/docs/styles.css
+++ b/docs/styles.css
@@ -29,6 +29,42 @@ body {
     100% { right: -1000px; }
 }
 
+#InfoBar span{
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    font-family: Arial, Helvetica, sans-serif;
+    transform: translateY(-50%);
+}
+
+#InfoWIP{
+    position: absolute;
+    left: 27.5px;
+    bottom: 75px;
+    z-index: 5;
+    font-size: 20px;
+    color: white;
+    font-family: persona;
+}
+#InfoBar:hover{
+    background-color: #ddd;
+}
+#InfoBar{
+    position: fixed;
+    background-color: #eee;
+    bottom: 20px;
+    left: 20px;
+    width: 150px;
+    height: 30px;
+    z-index: 5;
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
+    -webkit-box-shadow: -2px 2px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -2px 2px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: -2px 2px 5px 0px rgba(0,0,0,0.75);
+}
+
 .progress{
     margin-top: 55px;
     font-size: 20px;
